@@ -1,11 +1,14 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.572 2009-07-09 13:15:41 remko Exp $
+	$Id: ChangeLog,v 1.573 2009-07-09 22:43:22 guru Exp $
 -----------------------------------------------------------------------------------------
 
 -----------------------------------------------------------------------------------------
 2009-07-10
 	* GMT 4.5.0 finalized and released
 -----------------------------------------------------------------------------------------
+
+2009-07-09	pwessel
+	* gmt_mgg_header2.c:	Can now handle float grids, and properly handles byte-order swapping.
 
 2009-07-09	remko
 	* psclip.c:		Produce warning when using -B in combination with -N or -T.
